<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersPackage.ProfileFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="20dp"
                android:background="@color/red">

                <ImageView
                    android:id="@+id/profile_img"
                    android:src="@drawable/profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/txt_name_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/profile_img"
                    android:fontFamily="@font/lato_bold"
                    android:includeFontPadding="false"
                    android:text="Santiago Henao"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_profile_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_name_profile"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/profile_img"
                    android:fontFamily="@font/lato"
                    android:includeFontPadding="false"
                    android:text="Administrador"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp"
                android:layout_width="match_parent"
                android:padding="20dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    app:cardBackgroundColor="@color/red"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:padding="5dp">

                        <ImageView
                            android:layout_centerHorizontal="true"
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@drawable/profile" />

                        <TextView
                            android:id="@+id/txt_count_uno_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/lato_bold"
                            android:includeFontPadding="false"
                            android:text="0"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_count_uno_profile"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/lato"
                            android:includeFontPadding="false"
                            android:text="Actividades"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    app:cardBackgroundColor="@color/red"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:padding="5dp">

                        <ImageView
                            android:layout_centerHorizontal="true"
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@drawable/profile" />

                        <TextView
                            android:id="@+id/txt_count_dos_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/lato_bold"
                            android:includeFontPadding="false"
                            android:text="0"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:includeFontPadding="false"
                            android:layout_below="@id/txt_count_dos_profile"
                            android:layout_centerHorizontal="true"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="Beneficiarios"
                            android:fontFamily="@font/lato"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginTop="-30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:enabled="false"
                        android:id="@+id/edit_usuario_profile"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/institucion"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:id="@+id/edit_institucion_profile"
                        android:enabled="false"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/pais"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:id="@+id/edit_pais_profile"
                        android:enabled="false"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:id="@+id/edit_email_profile"
                        android:enabled="false"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:enabled="false"
                        android:id="@+id/edit_telefono_profile"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>